welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:16: error: ambiguous reference to overloaded definition,
both method isFacingTrail in class SlugHunting of type ()Boolean
and  method isFacingTrail in class SlugHunting of type ()Boolean
match expected type Boolean
if (isFacingTrail) {avance()} 
    ^SlugHunting:18: error: ambiguous reference to overloaded definition,
both method isFacingTrail in class SlugHunting of type ()Boolean
and  method isFacingTrail in class SlugHunting of type ()Boolean
match argument types () and expected result type Boolean
if (isFacingTrail()) { avance()} 
    ^SlugHunting:20: error: not found: value isFacingtrail
if (isFacingtrail()) {avance()}
    ^SlugHunting:22: error: not found: value isFacingtrail
if (isFacingtrail()) {avance()}
    ^SlugHunting:26: error: method isFacingTrail is defined twice
  conflicting symbols both originated in file 'plm.runtime19.SlugHunting'
def isFacingTrail():Boolean = {
    ^